--- a/historyofprogramming.html
+++ b/historyofprogramming.html
@@ -25,6 +25,7 @@
 
 
 	<h2>Alan Turing</h2>
+		<img src="images/ALAN.jpg" style="float: up;">
 		
 		<img src="images/ACE.jpg" style="float: up;">
 	<p style="font-size: 25px; text-align: left;">
